compiler/w_parser/tests/postfix.w
fn main(): void {
	f.a.b;
	a."hi"; // error
	a[1][2];
	a[1; // error
	a(1, 2, 3);
	b(2 + 2, 3 + 3);
	c(a, ); // error
	d(a, b // error
}